--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ strong {
 	text-shadow: none;
 	text-transform: none;
 	font-family: 'Oswald', sans-serif;
-	font-size: 1em;
+	font-size: 2vh;
 	font-weight: 200;
 	color: rgb(80, 12, 80);
 }
