--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,6 @@
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 */
 
-html, body {
-}
-
 body {
 	margin: 0em;
 	padding: 0em;
@@ -50,7 +47,7 @@ strong {
 .button-style1 a {
 	display: block;
 	padding: 1em 0em 1em 1em;
-	background: grey url(images/lu.jpg) no-repeat right 50%;
+	background: grey url(images/img02.jpg) no-repeat right 50%;
 	text-decoration: none;
 	text-shadow: none;
 	text-transform: none;
@@ -93,7 +90,7 @@ ul.style1 li {
 ul.style1 a {
 	display: block;
 	padding: 0em 0em 0em 1.87em;
-	background: url(images/img05.png) no-repeat left 3px;
+	background: url(images/img01.png) no-repeat left 3px;
 	text-shadow: 1px 1px 0px #FFFFFF;
 	text-decoration: none;
 	color: #7C6E49;
@@ -178,12 +175,6 @@ ul.style3 a:hover {
 	text-decoration: underline;
 }
 
-ul.style3 .date {
-}
-
-ul.style3 .date b {
-}
-
 ul.style3 .date a {
 	color: #FFFFFF;
 }
@@ -239,11 +230,6 @@ ul.style5 li {
 	padding: 0.25em 0.25em;
 	line-height: 0;
 }
-
-ul.style5 a {
-}
-
-
 
 /** LIST STYLE 6 */
 
@@ -318,10 +304,6 @@ ul.style6 .first {
 		text-align: center;
 		color: #877850;
 		background: #62573b;
-	}
-	
-	#copyright .container
-	{
 	}
 	
 	#copyright a
