--- a/css/skel-noscript.css
+++ b/css/skel-noscript.css
@@ -66,7 +66,7 @@
 
 		.row > * {
 			padding: 50px 0 0 50px;
-			float: left;
+			float: none;
 			-moz-box-sizing: border-box;
 			-webkit-box-sizing: border-box;
 			-o-box-sizing: border-box;
