--- a/css/style.css
+++ b/css/style.css
@@ -30,15 +30,15 @@ h2 {
 }
 
 /*icons style */
-  i.fas,
-  i.fab {
-	border: 2px solid grey;
+ i.fas,
+ i.fab {
+	border: 1em solid white;
 	text-align: center;
-	color: white;
-        font-size: 4em;
+	color: black;
+        font-size: 2em;
 	transition: text-shadow 1s;
 	text-decoration:none;
-        text-shadow: 0px 0px 20px coral;
+        text-shadow: 0px 0px 20px palevioletred;
 }
 
 p {
