--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -145,10 +145,8 @@ body {
 
 #banner a img {
 	display: block;
-	width: 623px; 
-	height: 921px; 
-	border: 1px solid rgb(112, 33, 72);
 	width: inherit; 
+	border: 1px solid white; 
 	height: inherit;
 }
 
