--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -143,7 +143,7 @@ body {
 	background: #FFFFFF;
 }
 
-#banner a img {
+#banner a img .banner {
 	display: block;
 	width: inherit; 
 	border: 1px solid white; 
