--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -145,9 +145,9 @@ body {
 
 #banner a img .banner {
 	display: block;
-	width: inherit; 
+	width: 100%; 
 	border: 1px solid white; 
-	height: inherit;
+	height: auto !important;
 }
 
 /* Content */
