--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,11 @@ body {
 	color: #877850;
 }
 
+body .img {
+	max-width:100%;
+	max-height:auto;
+}
+
 body, #skel-panels-pageWrapper {
 	background: #FFF2CF url(images/img01.png) repeat;
 }
