--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ strong {
 	font-family: 'Oswald', sans-serif;
 	font-size: 2vh;
 	font-weight: 200;
-	color: purple;
+	color: white;
 }
 
 /** LIST STYLE 1 */
