--- a/css/style.css
+++ b/css/style.css
@@ -300,12 +300,12 @@ ul.style6 .first {
 		position: relative;
 		padding: 2em 0em;
 		text-align: center;
-		color: #877850;
+		color: white;
 		background: #62573b;
 	}
 	
 	#copyright a
 	{
 		text-decoration: none;
-		color: #877850;
+		color: white;
 	}
