--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -143,7 +143,7 @@ body {
 	background: #FFFFFF;
 }
 
-#banner a img .banner {
+#banner a img {
 	display: block;
 	width: 100%; 
 	border: 1px solid white; 
