--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,10 @@ h2 {
         text-shadow: 0px 0px 20px palevioletred;
 }
 
+i.fab.fa-instagram-square {
+	float: right;
+} 
+
 p {
 	line-height: 170%;
 }
