--- a/css/style.css
+++ b/css/style.css
@@ -35,10 +35,8 @@ h2 {
 	border: 1em solid white;
 	text-align: center;
 	color: black;
-        font-size: 2em;
-	transition: text-shadow 1s;
+        font-size: 2em
 	text-decoration:none;
-        text-shadow: 0px 0px 20px palevioletred;
 }
 
 i.fab.fa-instagram-square {
@@ -47,6 +45,10 @@ i.fab.fa-instagram-square {
 
 i.fas.fa-envelope-square {
 	float:left;
+}
+
+i.fab.fa-whatsapp {
+	
 }
 
 p {
