--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -16,7 +16,7 @@ body {
 /* Header */
 
 #header {
-	display: none;
+	text-align:center;
 }
 
 /*********************************************************************************/
