--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -17,7 +17,8 @@ body {
 
 #header {
 	position: relative;
-	padding: 3em 0em;
+	padding: 1em 1em;
+	display:flex;
 }
 
 /*********************************************************************************/
