--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,11 @@ p {
 
 a {
 	color: #706443;
+        font-size: 1.5em;
+        font-style: italic;
+        font-family: Arial, Helvetica, sans-serif;
 }
+
 
 strong {
 	font-weight: 700;
