--- a/css/style.css
+++ b/css/style.css
@@ -90,8 +90,8 @@ ul.style1 {
 
 ul.style1 li {
 	padding: 0.94em 0em;
+        font-size: 1.6em;
 }
-
 ul.style1 a {
 	display: block;
 	padding: 0em 0em 0em 1.87em;
