--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -116,7 +116,7 @@
 	margin-bottom: 3em;
 	padding: 1.87em;
 	background: #FFFFFF url(images/img02.png) repeat;
-	width: 50%;
+	width: 100%
 }
 
 #banner a img {
