--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -121,9 +121,10 @@
 
 #banner a img {
 	display: block;
-	width: 50%;
-	margin-left:auto;
-	margin-right:auto;
+	width: 100%; 
+	border: 1px solid white; 
+	height: auto !important;
+	padding:1em;
 }
 
 /* Content */
