--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -21,6 +21,12 @@ body {
 	display:flex;
 }
 
+#logo {
+	position:absolute;
+	top:3em;
+	left:0;
+}
+
 /*********************************************************************************/
 /* UI                                                                            */
 /*********************************************************************************/
