--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,8 @@ ul.style1 a:hover {
 
 ul.style1 .first {
 	background: none;
+	font-style:italic;
+	font-family: Georgia, "Times New Roman", Times, serif;
 }
 
 /** LIST STYLE 2 */
