--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -27,6 +27,19 @@ body {
 	left:0;
 }
 
+#logo h1 {
+	float:left;
+}
+
+#logo span {
+	float:left;
+	padding: 1em 0em 0em 0em;
+	font-family:Georgia, "Times New Roman", Times, serif;
+	font-size: 2.5em;
+	font-size:italic;
+	color: #545454
+}
+
 /*********************************************************************************/
 /* UI                                                                            */
 /*********************************************************************************/
