--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -33,7 +33,7 @@ body {
 	font-family:Georgia, "Times New Roman", Times, serif;
 	font-size: 1.5em;
 	font-size:italic;
-	color: grey;
+	color: black;
 }
 
 #logo span {
