--- a/css/style.css
+++ b/css/style.css
@@ -44,9 +44,10 @@ p {
 
 a {
 	color: #706443;
-    font-size: 1em;
-    font-style: italic;
-    font-family: Arial, Helvetica, sans-serif;
+        font-size: 1em;
+        font-style: italic;
+        font-family: Arial, Helvetica, sans-serif;
+        text-decoration:none;	
 }
 
 strong {
