--- a/css/style.css
+++ b/css/style.css
@@ -51,11 +51,11 @@ p {
 }
 
 a {
-	color: #706443;
+	color: black;
         font-size: 1em;
         font-style: italic;
-        font-family: Arial, Helvetica, sans-serif;
-        text-decoration:none;	
+	font-family: 'Oswald', sans-serif;
+	text-decoration:none;
 }
 
 strong {
