--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -353,11 +353,12 @@ ul.style5 a img {
 }
 
 ul.style2 img {
-        float: left;
-        margin-right: 1.5em;
-        margin-left: -2em;
-        background: white;
-	padding: 1em;
+       float: left;
+       margin-right: 2em;
+       margin-left: -2em;
+       background: white;
+       padding: 1.5em;
+       width: 60vh;
 }	
 
 ul.style2 a img {
