--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 body {
 	margin: 0em;
 	padding: 0em;
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Georgia, "Times New Roman", Times, serif;
 	font-size: 11pt;
 	color: #877850;
 }
