--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -43,6 +43,10 @@ body {
 	color: #545454
 }
 
+.nav menu {
+	margin-left:11%;
+} 
+
 /*********************************************************************************/
 /* UI                                                                            */
 /*********************************************************************************/
