--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -96,6 +96,32 @@
 	margin-top: 0em;
 }
 
+.wrapper {
+	display: grid;
+	grid-template-columns: 200px 200px;
+}
+
+  * {box-sizing: border-box;}
+  .wrapper {
+	  border: 2px solid white;
+	  border-radius: 5px;
+	  background-color: white;
+}
+
+  .wrapper > div {
+	  border: 2px solid white;
+	  border-radius: 5px;
+	  background-color: white;
+	  padding: 1em;
+	  color: white;
+}
+
+  .nested {
+	  border: 2px solid #ffec99;
+	  border-radius: 5px;
+	  background-color: #fff9db;
+	  padding: 1em;
+}
 
 /* Page Wrapper */
 
