--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -98,7 +98,7 @@
 
 .wrapper {
 	display: grid;
-	grid-template-columns: 200px 200px;
+	grid-template-columns:200px 200px 200px;
 }
 
   * {box-sizing: border-box;}
