--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ h2 {
 }
 
 /*icons style */
- .fa-whatsapp-square:before {
+.fa-whatsapp-square:before {
 	content: "\f40c";
 	color: #009688;
 }
@@ -52,9 +52,8 @@ p {
 
 a {
 	color: black;
-        font-size: 1em;
-        font-style: italic;
-	font-family: 'Oswald', sans-serif;
+    font-size: 1em;
+	font-family: Times new roman, sans-serif;
 	text-decoration:none;
 }
 
@@ -67,7 +66,7 @@ strong {
 
 .button-style1 a {
 	display: flex;
-	padding: 0em 0em 0em 1em;
+	padding: 1px;
 	background: #009688;
 	text-decoration: none;
 	text-shadow: none;
@@ -76,7 +75,7 @@ strong {
 	font-size: 2vh;
 	font-weight: 200;
 	color: white;
-	width:20.9em;
+	width:264px;
 }
 
 /** LIST STYLE 1 */
@@ -107,7 +106,7 @@ ul.style1 a:hover {
 ul.style1 .first {
 	background: none;
 	font-family: Georgia, "Times New Roman", Times, serif;
-	font-style:italic;
+	
 }
 
 /** LIST STYLE 2 */
