--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 body {
 	margin: 0em;
 	padding: 0em;
-	font-family: Georgia, "Times New Roman", Times, serif;
+	font-family: Georgia, "Times New Roman", serif;
 	font-size: 11pt;
 	color: #877850;
 }
@@ -105,7 +105,7 @@ ul.style1 a:hover {
 
 ul.style1 .first {
 	background: none;
-	font-family: Georgia, "Times New Roman", Times, serif;
+	font-family: Georgia, "Times New Roman", serif;
 	
 }
 
